fix: Add padding to the footer for visibility

--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ img{
 .attribution { 
     font-size: 11px; 
     text-align: center;
+    padding:1rem;
 }
 .attribution a {
      color: hsl(75, 94%, 57%);
